--- a/menu/templates/menu/inicio.html
+++ b/menu/templates/menu/inicio.html
@@ -50,7 +50,7 @@
                 <form action="{% url 'habilidades' %}">
                     <button class="btn-minecraft btns-grandes w-100 mb-2" title="Habilidades">Habilidades</button>
                 </form>
-                <form action="{% url 'habilidades' %}">
+                <form action="{% url 'proyectos' %}">
                     <button class="btn-minecraft btns-grandes w-100 mb-2" title="Proyectos">Proyectos</button>
                 </form>
                 <form action="{% url 'contacto' %}">
